overflow bug fixed
due to animate slide right body got overflow Y / fixed now

--- a/styles/SkillCard.module.scss
+++ b/styles/SkillCard.module.scss
@@ -25,20 +25,26 @@
 
         //need responsive
         //skill features in card (__List)
-        &:nth-child(even){
-        margin-left: 3rem;
-        }
+        // @include desktop-1 {
+        // &:nth-child(even){
+        // margin-left: 3rem;
+        // }
+        //     }
+        
     }
     &__Description{
         padding: 0 1.5rem;
     }
-    &__List{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        justify-items: space-between;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    }
+    // &__List{
+    //     display: grid;
+    //     grid-template-columns: 1fr;
+    //     justify-items: space-between;
+    //     padding-top: 2rem;
+    //     padding-bottom: 2rem;
+    //     @include desktop-1{
+    //         grid-template-columns: repeat(2,1fr);
+    //     }
+    // }
 }
 
 .Banner{
